# ZGameEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
ext/glad/: CMakeLists.txt
ext/glad/include/glad/: glad.h
ext/glad/src/: glad.c
samples/sandbox/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt  engine.cpp  engine.h  window.cpp  window.h
src/rendering/: CMakeLists.txt  renderer.cpp  renderer.h
src/util/: CMakeLists.txt  log.cpp  log.h  logging.cpp
